--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,20 @@
 # Done to increase the memory available to gradle.
-    org.gradle.jvmargs=-Xmx6G
-    org.gradle.parallel=true
+org.gradle.jvmargs=-Xmx6G
+org.gradle.parallel=true
 
-# Fabric Properties
-    # check these on https://fabricmc.net/develop
-    minecraft_version=1.20.1
-    yarn_mappings=1.20.1+build.9
-    loader_version=0.14.21
+# Fabric
+# Check these on https://fabricmc.net/develop
+minecraft_version=1.20.1
+
+# These should be automatically updated, unless the environment
+#  variable "DISABLE_PROPERTIES_UPDATE" is set.
+loader_version=0.15.11
+yarn_version=1.20.1+build.10
+
+# Dependencies
 
 # Mod Properties
-    mod_version=1.0.0
-    maven_group=top.offsetmonkey538.hcwt
-    archives_base_name=hcwt
+mod_version=1.0.0
+maven_group=top.offsetmonkey538.hcwt
+archives_base_name=hcwt
+supported_minecraft_versions = >=1.20
