Clean up build script

--- a/build.gradle
+++ b/build.gradle
@@ -9,9 +9,8 @@ plugins {
 sourceCompatibility = JavaVersion.VERSION_17
 targetCompatibility = JavaVersion.VERSION_17
 
-archivesBaseName = project.archives_base_name
-version = project.mod_version
-group = project.maven_group
+archivesBaseName = "hcwt"
+version = "${project.mod_version}+${project.minecraft_version}"
 
 outlet {
 	maintainPropertiesFile = System.getenv("DISABLE_PROPERTIES_UPDATE") == null
@@ -21,14 +20,6 @@ outlet {
 			'yarn_version': outlet.yarnVersion(project.minecraft_version),
 			'loader_version': outlet.loaderVersion()
 	]
-}
-
-repositories {
-	// Add repositories to retrieve artifacts from in here.
-	// You should only use this when depending on other mods because
-	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
-	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
-	// for more information about repositories.
 }
 
 loom {
@@ -43,6 +34,17 @@ loom {
 
 }
 
+// https://gist.github.com/maityyy/3dbcd558d58a6412c3a2a38c72706e8e
+afterEvaluate {
+	loom.runs.configureEach {
+		vmArg "-javaagent:${configurations.compileClasspath.find{ it.name.contains("sponge-mixin") }}"
+	}
+}
+
+repositories {
+	mavenCentral()
+}
+
 dependencies {
 	// To change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
@@ -51,10 +53,16 @@ dependencies {
 }
 
 processResources {
-	inputs.property "version", project.version
+	inputs.properties(Map.of(
+			"modVersion",                 project.mod_version,
+			"supportedMinecraftVersions", project.supported_minecraft_versions
+	))
 
 	filesMatching("fabric.mod.json") {
-		expand "version": project.version
+		expand(Map.of(
+				"modVersion",                 project.mod_version,
+				"supportedMinecraftVersions", project.supported_minecraft_versions
+		))
 	}
 }
 
@@ -63,9 +71,6 @@ tasks.withType(JavaCompile).configureEach {
 }
 
 java {
-	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
-	// if it is present.
-	// If you remove this line, sources will not be generated.
 	withSourcesJar()
 }
 
