--- a/gradle.properties
+++ b/gradle.properties
@@ -4,12 +4,12 @@ org.gradle.parallel          = true
 
 # Fabric
 # Check these on https://fabricmc.net/develop
-minecraft_version            = 1.20.1
+minecraft_version            = 1.21-rc1
 
 # These should be automatically updated, unless the environment
 #  variable "DISABLE_PROPERTIES_UPDATE" is set.
 loader_version               = 0.15.11
-yarn_version                 = 1.20.1+build.10
+yarn_version                 = 1.21-rc1+build.1
 
 # Dependencies
 
