--- a/gradle.properties
+++ b/gradle.properties
@@ -4,15 +4,15 @@ org.gradle.parallel          = true
 
 # Fabric
 # Check these on https://fabricmc.net/develop
-minecraft_version            = 1.21-rc1
+minecraft_version            = 1.21
 
 # These should be automatically updated, unless the environment
 #  variable "DISABLE_PROPERTIES_UPDATE" is set.
 loader_version               = 0.15.11
-yarn_version                 = 1.21-rc1+build.1
+yarn_version                 = 1.21+build.1
 
 # Dependencies
 
 # Mod Properties
-mod_version                  = 1.0.0
+mod_version                  = 1.1.0
 supported_minecraft_versions = >=1.20
